--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,11 @@ services:
       - 8080:8080
     environment:
       - PORT=:8080
-      - DATABASE_URL=host=db user=postgres password=secret dbname=pismo port=5432 sslmode=disable
-      - TEST_DATABASE_URL=host=db user=postgres password=secret dbname=pismo port=5432 sslmode=disable search_path=pg_temp
+      - DATABASE_HOST=db
+      - DATABASE_PORT=5432
+      - DATABASE_USER=postgres
+      - DATABASE_PASSWORD=secret
+      - DATABASE_DBNAME=pismo
     depends_on:
       - db
     links:
